--- a/force-app/main/default/translations/no.translation-meta.xml
+++ b/force-app/main/default/translations/no.translation-meta.xml
@@ -2,19 +2,40 @@
 <Translations xmlns="http://soap.sforce.com/2006/04/metadata">
     <customLabels>
         <label>Overfør</label>
-        <name>NKS_Transfer</name>
+        <name>STO_Transfer</name>
     </customLabels>
     <customLabels>
         <label>Noe gikk galt ved å overføre henvendelsen.</label>
-        <name>NKS_Transfer_Display_Text</name>
+        <name>STO_Transfer_Display_Text</name>
     </customLabels>
     <customLabels>
         <label>Legg tilbake</label>
-        <name>NKS_Put_Back</name>
+        <name>STO_Put_Back</name>
     </customLabels>
     <customLabels>
         <label>Reserver til meg</label>
-        <name>NKS_Reserve_For_Me</name>
+        <name>STO_Reserve_For_Me</name>
+    </customLabels>
+    <customLabels>
+        <label>Ferdigstill og del med brukeren</label>
+        <name>STO_Complete_And_Share</name>
+    </customLabels>
+    <customLabels>
+        <label>Vis melding</label>
+        <name>STO_Medskriv_Label</name>
+    </customLabels>
+    <customLabels>
+        <label>Brukeren har ikke samtykket til medskriv.</label>
+        <name>STO_Medskriv_Text</name>
+    </customLabels>
+    <customLabels>
+        <label>Henvendelsen er allerede ferdigstilt.</label>
+        <name>STO_Case_Completed</name>
+    </customLabels>
+    <customLabels>
+        <label>Du kan ikke ferdigstille denne henvendelsen for den er verken reservert til deg eller
+            under arbeid.</label>
+        <name>STO_Case_Not_Reserved</name>
     </customLabels>
     <customLabels>
         <label>Send oss opplysninger som gjelder saken din. Du får en kvittering på at vi har
