--- a/force-app/main/default/classes/nksJournalFeilregistrertQueueable_Test.cls
+++ b/force-app/main/default/classes/nksJournalFeilregistrertQueueable_Test.cls
@@ -8,15 +8,18 @@ public with sharing class nksJournalFeilregistrertQueueable_Test {
         Journal_Entry__c je = (Journal_Entry__c) STO_TestDataFactory.createRecord(
             new Journal_Entry__c(CRM_Conversation_Note__c = convNote.Id)
         );
-        Thread__c chatThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Type__c = 'CHAT'));
+        Thread__c chatThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Thread_Type__c = 'CHAT'));
         Journal_Entry__c je2 = (Journal_Entry__c) STO_TestDataFactory.createRecord(
             new Journal_Entry__c(CRM_Thread__c = chatThread.Id)
         );
-        Thread__c stoThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Type__c = 'STO'));
+        Thread__c stoThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Thread_Type__c = 'STO'));
+        STO_TestDataFactory.createRecord(new Message__c(CRM_Thread__c = stoThread.Id, CRM_Message_Text__c = 'En melding.'));
+        STO_TestDataFactory.createRecord(new Message__c(CRM_Thread__c = stoThread.Id, CRM_Message_Text__c = 'En melding.'));
+        STO_TestDataFactory.createRecord(new Message__c(CRM_Thread__c = stoThread.Id, CRM_Message_Text__c = 'En melding.'));
         Journal_Entry__c je3 = (Journal_Entry__c) STO_TestDataFactory.createRecord(
             new Journal_Entry__c(CRM_Thread__c = stoThread.Id)
         );
-        Thread__c stbThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Type__c = 'STB'));
+        Thread__c stbThread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c(CRM_Thread_Type__c = 'STB'));
         Journal_Entry__c je4 = (Journal_Entry__c) STO_TestDataFactory.createRecord(
             new Journal_Entry__c(CRM_Thread__c = stbThread.Id)
         );
@@ -28,6 +31,32 @@ public with sharing class nksJournalFeilregistrertQueueable_Test {
         List<Journal_Entry__c> oldJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
         Test.startTest();
         new nksJournalFeilregistrertQueueable();
+        Test.stopTest();
+        List<Journal_Entry__c> newJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
+        Assert.areEqual(4, oldJEntries.size());
+        Assert.areEqual(4, newJEntries.size());
+    }
+
+    @IsTest
+    static void processJournalSuffixTest() {
+        ApiMock.setTestMock('POST_CREATE_JOURNAL', 200, 'OK');
+        List<Journal_Entry__c> oldJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
+        String longSuffix = 'NormalSuffix';
+        Test.startTest();
+        new nksJournalFeilregistrertQueueable(longSuffix, 'Id != null');
+        Test.stopTest();
+        List<Journal_Entry__c> newJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
+        Assert.areEqual(4, oldJEntries.size());
+        Assert.areEqual(4, newJEntries.size());
+    }
+
+    @IsTest
+    static void processJournalByteSizeTest() {
+        ApiMock.setTestMock('POST_CREATE_JOURNAL', 200, 'OK');
+        List<Journal_Entry__c> oldJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
+        String longSuffix = 'VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!VeryLongAndInsaneSuffixToBumpUpByteSizeOfRequest!';
+        Test.startTest();
+        new nksJournalFeilregistrertQueueable(longSuffix, 'Id != null');
         Test.stopTest();
         List<Journal_Entry__c> newJEntries = [SELECT Id, Journal_Entry_Status__c FROM Journal_Entry__c];
         Assert.areEqual(4, oldJEntries.size());
